# MaxPane

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ReDockIT_Apply_Layout_1.lua  ReDockIT_Apply_Layout_2.lua  ReDockIT_Apply_Layout_3.lua  ReDockIT_Custom_Layout_Example.lua  ReDockIT_Manager.lua  index.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
cpp/: CMakeLists.txt
cpp/src/: capture_queue.cpp  capture_queue.h  config.cpp  config.h  container.cpp  container.h  container_input.cpp  container_paint.cpp  container_state.cpp  context_menu.cpp  context_menu.h  debug.h  favorites_manager.cpp  globals.cpp  globals.h  main.cpp  project_state.cpp  project_state.h  split_tree.cpp  split_tree.h  splitter.cpp  splitter.h  swell_cocoa_helpers.h  swell_cocoa_helpers.mm  swell_modstub.cpp  window_manager.cpp  window_manager.h  workspace_manager.cpp  workspace_manager.h
cpp/test_minimal/: list_windows.cpp  test_plugin.cpp  test_plugin_debug.cpp
docs/: AUDIT-REPORT.md  forum-post.txt
